fix the legend width on smaller screen sizes

--- a/src/_sass/tools/food-waste-policy-finder/map_legend.scss
+++ b/src/_sass/tools/food-waste-policy-finder/map_legend.scss
@@ -71,7 +71,7 @@
   .map-legend {
     right: auto;
     left: 0;
-    width: 100%;
+    width: 90%;
     top: 100%;
     .legend-key {
       &.icon-key {
